# DisCostiC-Sim

./: .zenodo.json  CMakeLists.txt  Doxyfile  README.md  Run_Simulation.sh  Run_Simulation_ITAC.sh  cmake_uninstall.cmake.in  config.cfg
doc/html/: ADD_8c.html  ADD__FILE_8hpp.html  ADD__FILE_8hpp__incl.map  ADD__FILE_8hpp__incl.md5  ADD__FILE_8hpp_source.html  ADD__LBL_8hpp.html  ADD__LBL_8hpp__incl.map  ADD__LBL_8hpp__incl.md5  ADD__LBL_8hpp_source.html  AST_8hpp.html  AST_8hpp__incl.map  AST_8hpp__incl.md5  AST_8hpp_source.html  COPY_8c.html  COPY__FILE_8hpp.html  COPY__FILE_8hpp__incl.map  COPY__FILE_8hpp__incl.md5  COPY__FILE_8hpp_source.html  COPY__LBL_8hpp.html  COPY__LBL_8hpp__incl.map  COPY__LBL_8hpp__incl.md5  COPY__LBL_8hpp_source.html  CompModel_8hpp.html  CompModel_8hpp__incl.map  CompModel_8hpp__incl.md5  CompModel_8hpp_source.html  ConfigParser_8hpp.html  ConfigParser_8hpp__dep__incl.map  ConfigParser_8hpp__dep__incl.md5  ConfigParser_8hpp__incl.map  ConfigParser_8hpp__incl.md5  ConfigParser_8hpp_source.html  Convert-HEAT_8py.html  Convert-HPCG_8py.html  Convert-POISSONNS_8py.html  Convert-STREAM_8py.html  DAXPY_8c.html  DAXPY__FILE_8hpp.html  DAXPY__FILE_8hpp__incl.map  DAXPY__FILE_8hpp__incl.md5  (+818 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+111 more)
include/: AST.hpp  CompModel.hpp  ConfigParser.hpp  DataStruct.hpp  DataType.hpp  Grid.hpp  GridInit.hpp  NetworkConfigParser.hpp  YAMLParser.hpp  enum.hpp  macro.hpp
interconnectlevel/network-files/: IcelakeSP_Platinum-8360Y_InfiniBand_IntelMPI_interchip.cfg  IcelakeSP_Platinum-8360Y_InfiniBand_IntelMPI_intrachip.cfg
kerncraftintegration/: diskern.py
nodelevel/configs/: 2D-5PT-LINEAR.cfg  2D-5PT.cfg  ADD.cfg  COPY.cfg  DAXPY.cfg  DMMM.cfg  DMVM.cfg  HEAT.cfg  HEAT100K.cfg  HEAT10K.cfg  HEAT1K.cfg  KAHAN-DOT.cfg  POISSONNS.cfg  SCALAR-PRODUCT.cfg  SCALE.cfg  SCHOENAUER-DIV.cfg  SCHOENAUER-TRIAD.cfg  SCHOENAUER.cfg  SOR.cfg  STENCIL-1D-3PT.cfg  STENCIL-3D-27PT.cfg  STENCIL-3D-7PT.cfg  STENCIL-3D-LONGRANGE.cfg  STENCIL-UXX.cfg  STREAM.cfg  SUM.cfg  VECTOR-SUM.cfg  WAXPY.cfg  config.cfg  vectorSUM.cfg
nodelevel/include/: NodeLvlScg.hpp  NodeModel.hpp
nodelevel/kernels/: DIVIDE.c  HEAT.c  SCHOENAUER-TRIAD-DIV.c  SOR-LINEAR.c  SOR.c  converted.c  cos-triad.c  daxpy.c  poissonns.c  stream-triad.c
nodelevel/kernels/.heat.c_kerncraft/: kernel.c  kernel.h
nodelevel/kernels/.heat.c_kerncraft/1/(dim_x, 20000)/(dim_y, 4992)/: CSIM_analysis.pickle.lzma
nodelevel/kernels/.heat.c_kerncraft/IcelakeSP_Platinum-8360Y.yml/icc/-O3_-fno-alias_-xCORE-AVX512_-qopenmp_-qopt-zmm-usage=high_-ffreestanding_-nolib-inline/: kernel.s
nodelevel/kernels/.heat.c_kerncraft/IcelakeSP_Platinum-8360Y.yml/icc/-O3_-fno-alias_-xCORE-AVX512_-qopenmp_-qopt-zmm-usage=high_-ffreestanding_-nolib-inline/OSACA/ICX/: incore_analysis.pickle.lzma
nodelevel/kernels/.heat.c_kerncraft/IcelakeSP_Platinum-8360Y.yml/icc/-O3_-fno-alias_-xCORE-AVX512_-qopenmp_-qopt-zmm-usage=high_-ffreestanding_-nolib-inline/auto/auto/: kernel-marked.s
nodelevel/kernels/.stream-triad.c_kerncraft/: kernel.c  kernel.h
nodelevel/kernels/.stream-triad.c_kerncraft/1/(N, 24999996)/: CSIM_analysis.pickle.lzma
nodelevel/kernels/.stream-triad.c_kerncraft/IcelakeSP_Platinum-8360Y.yml/icc/-O3_-fno-alias_-xCORE-AVX512_-qopenmp_-qopt-zmm-usage=high_-ffreestanding_-nolib-inline/: kernel.s
nodelevel/kernels/.stream-triad.c_kerncraft/IcelakeSP_Platinum-8360Y.yml/icc/-O3_-fno-alias_-xCORE-AVX512_-qopenmp_-qopt-zmm-usage=high_-ffreestanding_-nolib-inline/auto/auto/: kernel-marked.s
nodelevel/machine-files/: BroadwellEP_E5-2630v4.yml  BroadwellEP_E5-2697v4_CoD.yml  CascadelakeSP_Gold-6248_SNC.yml  HaswellEP_E5-2695v3_CoD.yml  IcelakeSP_Platinum-8360Y.yml  IvyBridgeEP_E5-2660v2.yml  IvyBridgeEP_E5-2690v2.yml  SkylakeSP_Gold-5122.yml  SkylakeSP_Gold-6148.yml  SkylakeSP_Gold-6148_SNC.yml  SkylakeSP_Platinum-8147_2.7GHz.yml
nodelevel/network-files/: A64FX_waitio_socket_interchip.cfg  A64FX_waitio_socket_intercluster.cfg  A64FX_waitio_socket_intrachip.cfg  BroadwellEP_E5-2630v4_internode.cfg  IcelakeSP_Platinum-8360Y_internode.cfg  IcelakeSP_Platinum-8360Y_waitio_socket_interchip.cfg  IcelakeSP_Platinum-8360Y_waitio_socket_internode.cfg  IcelakeSP_Platinum-8360Y_waitio_socket_intrachip.cfg
nodelevel/src/: NodeLvlScg.cpp
src/: DisCosTiC.cpp
staticanalysis/: Convert-HEAT.py  Convert-HPCG.py  Convert-POISSONNS.py  Convert-STREAM.py  HPCG-initial.c  HPCG-rewrite  HPCG.c  heat  heat.c  poissonNS.c  requirements.txt  stream  stream.cpp
staticanalysis/Content/: bottom.txt  top.txt
staticanalysis/codes/multi-file-testcase/: common.h  init.h  propagate_kernel.h
staticanalysis/multicomm_STREAM/: stream.c  stream.cpp
staticanalysis/multifiles_HPCG/: main.cpp
staticanalysis/multifiles_LBM/: bc_kernel.h  collide_kernel.h  lbm.c  main.c  packunpack.h  physvar.h  utils.h
test/: ADD_FILE.hpp  COPY_FILE.hpp  DAXPY_FILE.hpp  DIVIDE_FILE.hpp  DMMM_FILE.hpp  DMMM_LBL.hpp  DMVM-TRANSPOSE_FILE.hpp  DMVM_FILE.hpp  HEATDIVIDE_FILE.hpp  HEATHEAT_FILE.hpp  HEATSOR_FILE.hpp  HEAT_COMP.hpp  HEAT_FILE.hpp  HEAT_LBL.hpp  HEAT_SRC.hpp  HPCG.hpp  KAHAN-DOT_FILE.hpp  P2P.hpp  SCALAR-PRODUCT_FILE.hpp  SCALE_FILE.hpp  SCHOENAUER-DIV_FILE.hpp  SCHOENAUER_FILE.hpp  SOR_COMP.hpp  SOR_FILE.hpp  SOR_LBL.hpp  SOR_SRC.hpp  STENCIL-1D-3PT_FILE.hpp  STENCIL-1D-3PT_LBL.hpp  STENCIL-3D-27PT_FILE.hpp  STENCIL-3D-7PT_FILE.hpp  STENCIL-3D-LONGRANGE_FILE.hpp  STENCIL-UXX_FILE.hpp  STREAM_COMP.hpp  STREAM_FILE.hpp  STREAM_LBL.hpp  STREAM_SRC.hpp  SUM_FILE.hpp  VECTOR-SUM_FILE.hpp  WAXPY_FILE.hpp
visualization/: TimeRankOP.hpp  chrome2otf2.py  json.hpp
